style changes for scrollbar issue. thanks @ggoss! closes #33

--- a/node/ui/css/main.css
+++ b/node/ui/css/main.css
@@ -41,6 +41,7 @@ body {
 
 #parsed-markdown {
     min-width: 200px;
+    width: 50%;
     margin: 0 auto;
 }
 
@@ -51,6 +52,7 @@ body {
 .markdown-body {
     padding: 30px;
     overflow: auto;
+    width: 100%;
 }
 
 .CodeMirror {
